Add initial HTML structure and styles

--- a/index.html
+++ b/index.html
@@ -3,12 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PortifolioWebsite</title>
+    <title>ShopOnline - Trang Bán Hàng</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Hello World</h1>
+        <nav class="navbar">
+            <div class="logo">
+                <a href="#">ShopOnline</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#">Trang Chủ</a></li>
+                <li><a href="#">Sản Phẩm</a></li>
+                <li><a href="#">Khuyến Mãi</a></li>
+                <li><a href="#">Giới Thiệu</a></li>
+                <li><a href="#">Liên Hệ</a></li>
+            </ul>
+            <div class="nav-icons">
+                <a href="#"><span>🔍</span></a>
+                <a href="#"><span>🛒</span></a>
+                <a href="#"><span>👤</span></a>
+            </div>
+        </nav>
     </header>
+    <main>
+        <section class="hero">
+            <h1>Chào mừng đến với ShopOnline!</h1>
+            <p>Mua sắm dễ dàng, giao hàng tận nơi.</p>
+            <a href="#" class="btn">Mua Ngay</a>
+        </section>
+        <!-- Thêm các section khác như sản phẩm nổi bật, ưu đãi, ... -->
+    </main>
+    <footer>
+        <p>&copy; 2025 ShopOnline. All rights reserved.</p>
+    </footer>
 </body>
 </html>
